<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >
    <ScrollView
        android:id="@+id/Main_LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottommenu"
        android:layout_alignParentTop="true" >
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >
				<!--战果-->
				<TextView
					android:id="@+id/lblzg"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
	                android:paddingTop="20dip"
					android:textColor="@drawable/red"
					android:textSize="15dip"
					android:padding="12dip"
					android:text="战果" 
					android:gravity="center"/>
				<RadioGroup
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:gravity="center"
				    android:orientation="horizontal" >
				    <RadioButton
				        android:id="@+id/radio_p"
				        android:layout_width="75dp"
				        android:layout_height="wrap_content"
				       	android:textColor="@drawable/black" 
				        android:gravity="center_vertical|center_horizontal"
				        android:text="@string/s_p" />
				    <RadioButton
				        android:id="@+id/radio_d"
				        android:layout_width="75dp"
				        android:layout_height="wrap_content"
				       	android:textColor="@drawable/black" 
				        android:gravity="center_vertical|center_horizontal"
				        android:text="@string/s_d" />
				    <RadioButton
				        android:id="@+id/radio_s"
				        android:layout_width="75dp"
				        android:layout_height="wrap_content"
				       	android:textColor="@drawable/black" 
				        android:gravity="center_vertical|center_horizontal"
				        android:text="@string/s_s" />
				</RadioGroup>
			</LinearLayout>
		    <TableLayout
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:shrinkColumns="0,1,2,3"
				android:stretchColumns="0,1,2,3"
				android:gravity="top|center_horizontal"
				android:layout_weight="1">
				<!--标题题头-->
				<TableRow
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">
					<TextView
					    android:id="@+id/lblwinner1"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content" 
						android:textColor="@drawable/red"
				        android:textSize="15dip"
				        android:text="@string/winner1" 
				        android:gravity="center_vertical|center_horizontal"/>
					<TextView
					    android:id="@+id/lblwinner2"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content" 
						android:textColor="@drawable/red"
				        android:textSize="15dip"
				        android:text="@string/winner2" 
				        android:gravity="center_vertical|center_horizontal"/>
					<TextView
					    android:id="@+id/lbllose1"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content" 
						android:textColor="@drawable/red"
				        android:textSize="15dip"
				        android:text="@string/lose1" 
				        android:gravity="center_vertical|center_horizontal"/>
					<TextView
					    android:id="@+id/lbllose2"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content" 
						android:textColor="@drawable/red"
				        android:textSize="15dip"
				        android:text="@string/lose2" 
				        android:gravity="center_vertical|center_horizontal"/>
				</TableRow>
				<!--5扇-->
				<TableRow
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">			
					<CheckBox
				       android:id="@+id/chkWin1_5"
				       android:textSize="15dip"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_5"/>
					<CheckBox
				       android:id="@+id/chkWin2_5"
				       android:textSize="15dip"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_5"/>
					<CheckBox
						android:id="@+id/chkLose1_5"
				       android:textSize="15dip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
						android:text="@string/s_5"/> 
					<CheckBox
						android:id="@+id/chkLose2_5"
				       android:textSize="15dip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
						android:text="@string/s_5"/> 
				</TableRow>
				<!--6扇-->
				<TableRow
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">			
					<CheckBox
				       android:id="@+id/chkWin1_6"
				       android:textSize="15dip"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_6"/>
					<CheckBox
				       android:id="@+id/chkWin2_6"
				       android:textSize="15dip"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_6"/>
					<CheckBox
						android:id="@+id/chkLose1_6"
				       	android:textSize="15dip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       	android:textColor="@drawable/black" 
						android:text="@string/s_6"/> 
					<CheckBox
						android:id="@+id/chkLose2_6"
				       	android:textSize="15dip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       	android:textColor="@drawable/black" 
						android:text="@string/s_6"/> 
				</TableRow>
				<!--7扇-->
				<TableRow
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">			
					<CheckBox
				       android:id="@+id/chkWin1_7"
				       android:textSize="15dip"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_7"/>
					<CheckBox
				       android:id="@+id/chkWin2_7"
				       android:textSize="15dip"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_7"/>
					<CheckBox
						android:id="@+id/chkLose1_7"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       	android:textColor="@drawable/black" 
						android:text="@string/s_7"/> 
					<CheckBox
						android:id="@+id/chkLose2_7"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       	android:textColor="@drawable/black" 
						android:text="@string/s_7"/> 
				</TableRow>
				<!--8扇-->
				<TableRow
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">			
					<CheckBox
				       android:id="@+id/chkWin1_8"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_8"/>
					<CheckBox
				       android:id="@+id/chkWin2_8"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_8"/>
					<CheckBox
						android:id="@+id/chkLose1_8"
				       android:textSize="15dip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
						android:text="@string/s_8"/> 
					<CheckBox
						android:id="@+id/chkLose2_8"
				       android:textSize="15dip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
						android:text="@string/s_8"/> 
				</TableRow>
				<!--9扇-->
				<TableRow
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">			
					<CheckBox
				       android:id="@+id/chkWin1_9"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_9"/>
					<CheckBox
				       android:id="@+id/chkWin2_9"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_9"/>
					<CheckBox
						android:id="@+id/chkLose1_9"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
						android:text="@string/s_9"/> 
					<CheckBox
						android:id="@+id/chkLose2_9"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
						android:text="@string/s_9"/> 
				</TableRow>
				<!--10扇-->
				<TableRow
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">			
					<CheckBox
				       android:id="@+id/chkWin1_10"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_10"/>
					<CheckBox
				       android:id="@+id/chkWin2_10"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_10"/>
					<CheckBox
						android:id="@+id/chkLose1_10"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
						android:text="@string/s_10"/> 
					<CheckBox
						android:id="@+id/chkLose2_10"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
						android:text="@string/s_10"/> 
				</TableRow>
				<!--11扇-->
				<TableRow
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">			
					<CheckBox
				       android:id="@+id/chkWin1_11"
				       android:textSize="15dip"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_11"/>
					<CheckBox
				       android:id="@+id/chkWin2_11"
				       android:textSize="15dip"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_11"/>
					<CheckBox
						android:id="@+id/chkLose1_11"
				       android:textSize="15dip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
						android:text="@string/s_11"/> 
					<CheckBox
						android:id="@+id/chkLose2_11"
				       android:textSize="15dip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
						android:text="@string/s_11"/> 
				</TableRow>
				<!--12扇-->
				<TableRow
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:gravity="center_vertical">			
					<CheckBox
				       android:id="@+id/chkWin1_12"
				       android:textSize="15dip"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_12"/>
					<CheckBox
				       android:id="@+id/chkWin2_12"
				       android:textSize="15dip"
				       android:layout_width="wrap_content"
				       android:layout_height="wrap_content" 
				       android:textColor="@drawable/black" 
				       android:text="@string/s_12"/>
					<CheckBox
						android:id="@+id/chkLose1_12"
				       android:textSize="15dip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       	android:textColor="@drawable/black" 
						android:text="@string/s_12"/> 
					<CheckBox
						android:id="@+id/chkLose2_12"
				       android:textSize="15dip"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
				       	android:textColor="@drawable/black" 
						android:text="@string/s_12"/> 
				</TableRow>
			</TableLayout>
		</TableLayout>
	</ScrollView>
	<TableLayout
        android:id="@id/bottommenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
		android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
		android:shrinkColumns="0,1,2"
		android:stretchColumns="0,1,2"
        android:padding="10dip" >
		<!--按钮-->
		<TableRow
		    android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_vertical">	
	        <Button
				android:id="@+id/cmdOK"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:gravity="center"
				android:text="@string/calculate"/>  
			<Button
				android:id="@+id/cmdClear"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:gravity="center"
				android:text="@string/clear"/> 
			<Button
				android:id="@+id/cmdExit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content" 
				android:gravity="center"
				android:text="@string/exit"/>  
		</TableRow>
    </TableLayout>
</RelativeLayout>