<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >
    <ScrollView
        android:id="@+id/Main_LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" 
		android:padding="15dip" >
        <TableLayout
            android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:baselineAligned="false"
			android:gravity="center_horizontal"
		    android:orientation="horizontal"
		    android:shrinkColumns="0,1,2"
		    android:stretchColumns="0,1,2">
			<!--贡献分-->
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				    android:id="@+id/lblP2"
			       	android:layout_width="wrap_content"
			       	android:layout_height="wrap_content" 
			       	android:textColor="@drawable/red"
			       	android:textSize="15dip"
			       	android:text="贡献分" 
			       	android:gravity="left"/>	
				<TextView
				    android:id="@+id/lbls6"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:textColor="@drawable/red"
			        android:textSize="15dip"
			        android:text="@string/s_6" 
			        android:gravity="left"/>
				<EditText
				    android:id="@+id/txts6"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:digits="1234567890."
			       	android:textSize="15dip"
				    android:singleLine="true"
			        android:gravity="right"/>	
			</TableRow>
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				    android:id="@+id/lbls7"
				    android:layout_column="1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:textColor="@drawable/red"
			       	android:textSize="15dip"
			        android:text="@string/s_7" 
			        android:gravity="left"/>
				<EditText
				    android:id="@+id/txts7"
				    android:layout_column="2"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:digits="1234567890."
			       	android:textSize="15dip"
				    android:singleLine="true"
			        android:gravity="right"/>	
			</TableRow>
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				    android:id="@+id/lbls8"
				    android:layout_column="1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:textColor="@drawable/red"
			        android:textSize="15dip"
			        android:text="@string/s_8" 
			        android:gravity="left"/>
				<EditText
				    android:id="@+id/txts8"
				    android:layout_column="2"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:digits="1234567890."
			        android:textSize="15dip"
			        android:gravity="right"/>	
			</TableRow>
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				    android:id="@+id/lbls9"
				    android:layout_column="1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:textColor="@drawable/red"
			        android:textSize="15dip"
			        android:text="@string/s_9" 
			        android:gravity="left"/>
				<EditText
				    android:id="@+id/txts9"
				    android:layout_column="2"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:digits="1234567890."
			        android:textSize="15dip"
				    android:singleLine="true"
			        android:gravity="right"/>	
			</TableRow>
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				    android:id="@+id/lbls10"
				    android:layout_column="1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:textColor="@drawable/red"
			       android:textSize="15dip"
			        android:text="@string/s_10" 
			        android:gravity="left"/>
				<EditText
				    android:id="@+id/txts10"
				    android:layout_column="2"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:digits="1234567890."
			        android:textSize="15dip"
				    android:singleLine="true"
			        android:gravity="right"/>	
			</TableRow>
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				    android:id="@+id/lbls11"
				    android:layout_column="1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:textColor="@drawable/red"
			       android:textSize="15dip"
			        android:text="@string/s_11" 
			        android:gravity="left"/>
				<EditText
				    android:id="@+id/txts11"
				    android:layout_column="2"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:digits="1234567890."
			        android:textSize="15dip"
				    android:singleLine="true"
			        android:gravity="right"/>	
			</TableRow>
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				    android:id="@+id/lbls12"
				    android:layout_column="1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:textColor="@drawable/red"
			       	android:textSize="15dip"
			        android:text="@string/s_12" 
			        android:gravity="left"/>
				<EditText
				    android:id="@+id/txts12"
				    android:layout_column="2"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:digits="1234567890."
			        android:textSize="15dip"
				    android:singleLine="true"
			        android:gravity="right"/>	
			</TableRow>
			<!--按钮-->
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical">
				<Button
				    android:id="@+id/cmdSave"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:gravity="center"
					android:text="保存"/>
				<Button
				    android:id="@+id/cmdReturn"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:gravity="center"
				    android:text="返回" /> 
				<Button
					android:id="@+id/cmdReSet"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:gravity="center"
					android:text="默认"/> 
			</TableRow>
	    </TableLayout>
	</ScrollView>
</RelativeLayout>