<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >
    <ScrollView
        android:id="@+id/resultScrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/resultbottommenu"
        android:layout_alignParentTop="true"
		android:padding="15dip" >
        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
			android:shrinkColumns="0,1"
			android:stretchColumns="1">
			<!--赢家一-->
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				    android:id="@+id/lblresultWin1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" 
			        android:textColor="@drawable/red"
			        android:textSize="15dip"
			        android:text="@string/winner1" 
			        android:gravity="left"/>
				<EditText
				    android:editable="false"
				    android:id="@+id/txtresultWin1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
				    android:singleLine="true"
			        android:gravity="left"/>	
			</TableRow>
			<!--赢家二-->
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				    android:id="@+id/lblresultWin2"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" 
			        android:textColor="@drawable/red"
			        android:textSize="15dip"
			        android:text="@string/winner2" 
			        android:gravity="left"/>
				<EditText
				    android:editable="false"
				    android:id="@+id/txtresultWin2"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
				    android:singleLine="true"
			        android:gravity="left"/>	
			</TableRow>
			<!--输家一-->
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				    android:id="@+id/lblresultLose1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" 
			        android:textColor="@drawable/red"
			        android:textSize="15dip"
			        android:text="@string/lose1" 
			        android:gravity="left"/>
				<EditText
				    android:editable="false"
				    android:id="@+id/txtresultLose1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
				    android:singleLine="true"
			        android:gravity="left"/>	
			</TableRow>
			<!--输家二-->
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				    android:id="@+id/lblresultLose2"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" 
			        android:textColor="@drawable/red"
			        android:textSize="15dip"
			        android:text="@string/lose2" 
			        android:gravity="left"/>
				<EditText
				    android:editable="false"
				    android:id="@+id/txtresultLose2"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
				    android:singleLine="true"
			        android:gravity="left"/>	
			</TableRow>
		</TableLayout>
	</ScrollView>
	<LinearLayout
        android:id="@id/resultbottommenu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
		android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:padding="10dip" >
		<!--按钮-->
        <Button
			android:id="@+id/cmdresultReturn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content" 
			android:gravity="center_vertical|center_horizontal"
			android:text="返回"/>  
    </LinearLayout>
</RelativeLayout>