<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >
    <ScrollView
        android:id="@+id/Main_LinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" 
		android:padding="15dip" >
        <TableLayout
            android:layout_width="wrap_content"
		    android:layout_height="fill_parent"
		    android:baselineAligned="false"
			android:gravity="center_horizontal"
		    android:orientation="horizontal"
		    android:shrinkColumns="0,1,2"
		    android:stretchColumns="0,1,2">
			<!--基础分-->
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				   	android:id="@+id/lblP1"
			       	android:layout_width="wrap_content"
			       	android:layout_height="wrap_content" 
			       	android:textColor="@drawable/red"
			       	android:textSize="15dip"
			       	android:text="基础分" 
			       	android:gravity="left"/>
				<TextView
				    android:id="@+id/lblp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:textColor="@drawable/red"
				    android:textSize="15dip"
			        android:text="@string/s_p" 	        
			        android:gravity="left"/>
				<EditText
				    android:id="@+id/txtp"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
				    android:textSize="15dip"
				    android:singleLine="true"
			        android:digits="1234567890."
			        android:gravity="right"/>	
			</TableRow>
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				    android:id="@+id/lbld"
				    android:layout_column="1" 		    
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:textColor="@drawable/red"
			       	android:textSize="15dip"
			        android:text="@string/s_d" 
			        android:gravity="left"/>
				<EditText
				    android:id="@+id/txtd"
				    android:layout_column="2"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			       android:textSize="15dip"
				    android:singleLine="true"
			        android:digits="1234567890."
			        android:gravity="right"/>	
			</TableRow>
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				    android:id="@+id/lbls"
				    android:layout_column="1"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			        android:textColor="@drawable/red"
			       	android:textSize="15dip"
			        android:text="@string/s_s" 
			        android:gravity="left"/>
				<EditText
				    android:id="@+id/txts"
				    android:layout_column="2"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content" 
			       	android:textSize="15dip"
				    android:singleLine="true"
			        android:digits="1234567890."
			        android:gravity="right"/>	
			</TableRow>
			<!--最高翻至-->
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical|center_horizontal">
				<TextView
				    android:id="@+id/lblmax"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content" 
				    android:layout_column="0"
			        android:textColor="@drawable/red"
			        android:textSize="15dip"
			        android:text="最高翻至" 
			        android:gravity="center_vertical|center_horizontal"/>
				<Spinner 
				    android:id="@+id/spinner_max" 
				    android:layout_column="2"
				    android:layout_width="fill_parent" 
				    android:layout_height="wrap_content"/>
			</TableRow>
			<!--按钮-->
			<TableRow
			    android:layout_width="fill_parent"
				android:layout_height="fill_parent"
				android:gravity="center_vertical">
				<Button
				    android:id="@+id/cmdSave"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:gravity="center"
					android:text="保存"/>
				<Button
				    android:id="@+id/cmdReturn"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
					android:gravity="center"
				    android:text="返回" /> 
				<Button
					android:id="@+id/cmdReSet"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:gravity="center"
					android:text="默认"/> 
			</TableRow>
		</TableLayout>
	</ScrollView>
</RelativeLayout>